Added contacts form

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <link rel="shortcut icon" href="https://img.icons8.com/cotton/512/bright-mind.png" type="image/x-icon">
 
     <!--  
+      - Other Icons
+    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!--  
       - Site Fonts
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,6 +38,9 @@
       - Website Render root area
     -->
     <div id="root"></div>
+
+
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 
   </body>
 
