--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
     <link rel="shortcut icon" href="https://img.icons8.com/cotton/512/bright-mind.png" type="image/x-icon">
 
     <!--  
+      - Carousel Settings Scripts
+    -->
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
+    <!--  
       - Other Icons
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,7 +46,7 @@
     -->
     <div id="root"></div>
 
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
   </body>
 
 </html>
