redesigned the service area

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!--  
       - Favi Icon
     -->
-    <link rel="shortcut icon" href="https://img.icons8.com/cotton/512/bright-mind.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/2913/2913008.png" type="image/x-icon">
 
     <!--  
       - Carousel Settings Scripts
