--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       - Favi Icon
     -->
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/2913/2913008.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--  
       - Carousel Settings Scripts
